# java-

./: .gitignore  README.md  start-frontend.bat
backend/: CMakeLists.txt  package-lock.json  package.json  server.js
backend/src/: main.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: ParticleBackground.vue
frontend/src/router/: index.js
frontend/src/stores/: gameStore.js
frontend/src/views/: AiAssistantView.vue  EndlessView.vue  GameView.vue  HomeView.vue  MindmapView.vue
legacy/: ai-assistant.html  ai-chat-panel.js  api-config.js  deepseek-service.js  game.js  java-io-game.html  styles.css
scripts/: start-all.bat  start-all.ps1  start-backend.bat
